# domain/routes/auth.js
@@ -1,0 +1,13 @@
+// D:\WORK\kursTimeBunBackStage\routes/auth.js
+import express from 'express';
+import { registerUser, loginUser } from '../controllers/authController.js';
+
+const router = express.Router();
+
+// Регистрация нового пользователя
+router.post('/register', registerUser);
+
+// Авторизация пользователя
+router.post('/login', loginUser);
+
+export default router;
